test/test-files/analyzer/functions/error-function-arg-types-match-declaration/exception.out
Semantic error in : ./test-files/analyzer/functions/error-function-arg-types-match-declaration/source.spice:6:5:
Referenced undefined function: Function/Procedure 'testFunction(string)' could not be found

6  testFunction("No double");
   ^^^^^^^^^^^^^^^^^^^^^^^^^